[package]
name = "rust-bench-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
flate2 = { version = "1", default-features = false, features = ["zlib"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
