[package]
name = "rust-bench-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
flate2 = { version = "1", default-features = false, features = ["zlib-ng"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2"] }
rand = "0.8"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.26"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
